Fixed navbar layout bug in mobile screen.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,8 @@ header ul li {
 
 	.mobile {
 		display: flex;
-		justify-content: space-around;
+		width: 100%;
+		justify-content: space-between;
 	}
 }
 
@@ -397,6 +398,10 @@ header ul li {
 @media only screen and (max-width: 479px) {
 	.thesis {
 		border-top: 1px solid lightgrey;
+	}
+
+	.thesis .content .left video {
+		margin-bottom: 2.5rem;
 	}
 }
 
